; ModuleID = '/home/carl/AnghaBench/reactos/base/shell/cmd/extr_for.c_ForLoop.c'
source_filename = "/home/carl/AnghaBench/reactos/base/shell/cmd/extr_for.c_ForLoop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @ForLoop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ForLoop(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca [3 x i32], align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %12 = bitcast [3 x i32]* %7 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %12, i8 0, i64 12, i1 false)
  store i32 0, i32* %9, align 4
  %13 = load i32*, i32** %5, align 8
  store i32* %13, i32** %11, align 8
  store i32 0, i32* %8, align 4
  br label %14

14:                                               ; preds = %28, %3
  %15 = load i32, i32* %8, align 4
  %16 = icmp slt i32 %15, 3
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = call i64 @GetNextElement(i32** %10, i32** %11)
  %19 = icmp ne i64 %18, 0
  br label %20

20:                                               ; preds = %17, %14
  %21 = phi i1 [ false, %14 ], [ %19, %17 ]
  br i1 %21, label %22, label %31

22:                                               ; preds = %20
  %23 = load i32*, i32** %10, align 8
  %24 = call i32 @_tcstol(i32* %23, i32* null, i32 0)
  %25 = load i32, i32* %8, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds [3 x i32], [3 x i32]* %7, i64 0, i64 %26
  store i32 %24, i32* %27, align 4
  br label %28

28:                                               ; preds = %22
  %29 = load i32, i32* %8, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %8, align 4
  br label %14

31:                                               ; preds = %20
  %32 = getelementptr inbounds [3 x i32], [3 x i32]* %7, i64 0, i64 0
  %33 = load i32, i32* %32, align 4
  store i32 %33, i32* %8, align 4
  br label %34

34:                                               ; preds = %59, %31
  %35 = load i32*, i32** %4, align 8
  %36 = call i32 @Exiting(i32* %35)
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %57, label %38

38:                                               ; preds = %34
  %39 = getelementptr inbounds [3 x i32], [3 x i32]* %7, i64 0, i64 1
  %40 = load i32, i32* %39, align 4
  %41 = icmp sge i32 %40, 0
  br i1 %41, label %42, label %48

42:                                               ; preds = %38
  %43 = load i32, i32* %8, align 4
  %44 = getelementptr inbounds [3 x i32], [3 x i32]* %7, i64 0, i64 2
  %45 = load i32, i32* %44, align 4
  %46 = icmp sle i32 %43, %45
  %47 = zext i1 %46 to i32
  br label %54

48:                                               ; preds = %38
  %49 = load i32, i32* %8, align 4
  %50 = getelementptr inbounds [3 x i32], [3 x i32]* %7, i64 0, i64 2
  %51 = load i32, i32* %50, align 4
  %52 = icmp sge i32 %49, %51
  %53 = zext i1 %52 to i32
  br label %54

54:                                               ; preds = %48, %42
  %55 = phi i32 [ %47, %42 ], [ %53, %48 ]
  %56 = icmp ne i32 %55, 0
  br label %57

57:                                               ; preds = %54, %34
  %58 = phi i1 [ false, %34 ], [ %56, %54 ]
  br i1 %58, label %59, label %69

59:                                               ; preds = %57
  %60 = load i32, i32* %8, align 4
  %61 = load i32*, i32** %6, align 8
  %62 = call i32 @_itot(i32 %60, i32* %61, i32 10)
  %63 = load i32*, i32** %4, align 8
  %64 = call i32 @RunInstance(i32* %63)
  store i32 %64, i32* %9, align 4
  %65 = getelementptr inbounds [3 x i32], [3 x i32]* %7, i64 0, i64 1
  %66 = load i32, i32* %65, align 4
  %67 = load i32, i32* %8, align 4
  %68 = add nsw i32 %67, %66
  store i32 %68, i32* %8, align 4
  br label %34

69:                                               ; preds = %57
  %70 = load i32, i32* %9, align 4
  ret i32 %70
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @GetNextElement(i32**, i32**) #2

declare dso_local i32 @_tcstol(i32*, i32*, i32) #2

declare dso_local i32 @Exiting(i32*) #2

declare dso_local i32 @_itot(i32, i32*, i32) #2

declare dso_local i32 @RunInstance(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
